...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="WORKOUTS" id="AFG-2L-t0z">
                        <barButtonItem key="rightBarButtonItem" title="Create New" id="2zr-u5-Yq7">
                            <connections>
                                <action selector="createWorkoutButton:" destination="RC1-Yi-l7N" id="2hc-cD-ILH"/>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="19"/>
                                                <state key="normal" title="ADD">
                                                    <color key="titleColor" name="Color"/>
                                                </state>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="LOG" id="BaF-wh-q4o"/>
                    <connections>
                        <outlet property="tableView" destination="JQy-ni-HGJ" id="Bc1-1R-XwC"/>
...
            <objects>
                <navigationController id="Tf4-3o-fiD" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Log" image="list.bullet" catalog="system" id="adh-1w-t1k"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="0tF-yr-cAB">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
...
                                                <color key="shadowColor" cyan="0.0" magenta="0.63902567720000003" yellow="1" black="0.0" alpha="1" colorSpace="custom" customColorSpace="genericCMYKColorSpace"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Workout Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9sD-ce-L77">
                                                <rect key="frame" x="21" y="11" width="114" height="54"/>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
...
            <objects>
                <navigationController id="Uq5-S2-5bh" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Settings" image="gear" catalog="system" id="RgN-Ua-n0c"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="40N-oY-DLI">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
...
            <objects>
                <navigationController id="xyf-CQ-r3m" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Workout" image="DumbbellNavigation" id="r0K-N3-o2G"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="li7-oq-i6h">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="YOUR STATS" id="ga1-ye-Kas"/>
                    <connections>
                        <outlet property="averagePaceLabel" destination="aTH-1a-n9C" id="8PD-as-ZuM"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="black" pointSize="28"/>
                                        <state key="normal" title="ENTER">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="bold"/>
...
                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="20"/>
                                        <color key="tintColor" name="Color"/>
                                        <state key="normal" title="Add Exercise">
                                            <preferredSymbolConfiguration key="preferredSymbolConfiguration" weight="black"/>
                                        </state>
...
                    </view>
                    <navigationItem key="navigationItem" id="JaX-JE-yeD">
                        <barButtonItem key="rightBarButtonItem" title="SAVE" id="Rgu-Pe-lHd">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="lMz-ot-hpw">
                                <rect key="frame" x="212" y="7" width="92" height="30"/>
...
