...
        if let userLocation = locationManager.location?.coordinate {
            let viewRegion = MKCoordinateRegion(center: userLocation, latitudinalMeters: 350, longitudinalMeters: 350)
            mapView.setRegion(viewRegion, animated: false)
            
            // Custom alert to alert the user to pick a cardio type before they start their run
            
            let alert = UIAlertController(title: "PICK CARDIO TYPE!", message: "Please pick your cardio type before you exercise to show calories burnt.", preferredStyle: .alert)
            alert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
            self.present(alert, animated: true, completion: nil)
            
        }
        
    }
    
...
    }
    
    
    //IBAction to present the cardio options for the user
    @IBAction func cardioButton(_ sender: UIButton) {
    
        let alertController = UIAlertController(title: "Pick Cardio Type", message: "",
                                                preferredStyle: .actionSheet)
        alertController.addAction(UIAlertAction(title: "Cancel", style: .cancel))
        alertController.addAction(UIAlertAction(title: "Run", style: .default) { _ in
            self.cardioRun()
        })
        alertController.addAction(UIAlertAction(title: "Cycle", style: .default) { _ in
            self.cardioBike()
        })
        
...
    }
    
    //stop button pressed
    @IBAction func stopPressed(_ sender: UIButton) {
        
        // UI alert to ask user if they want to discard or save thir exercise
        let alertController = UIAlertController(title: "End exercise?",
                                                    message: "Do you want to save or discard your exercise?",
                                                    preferredStyle: .actionSheet)
            
            alertController.addAction(UIAlertAction(title: "Save", style: .default) { _ in
                self.stopCardio()   // stopCardio function called
                self.saveCardio()   // saveCardio function called
                self.performSegue(withIdentifier: .details, sender: nil)
                //segue to the cardio details
               
            })
...
